; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_script.c_script_stats_call.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_script.c_script_stats_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @script_stats_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @script_stats_call(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @checkstats(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @lua_tonumber(i32* %8, i32 2)
  store i64 %9, i64* %4, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = sub nsw i64 %12, 1
  %14 = call i64 @stats_value_at(i32* %11, i64 %13, i64* %5)
  %15 = call i32 @lua_pushnumber(i32* %10, i64 %14)
  %16 = load i32*, i32** %2, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @lua_pushnumber(i32* %16, i64 %17)
  ret i32 2
}

declare dso_local i32* @checkstats(i32*) #1

declare dso_local i64 @lua_tonumber(i32*, i32) #1

declare dso_local i32 @lua_pushnumber(i32*, i64) #1

declare dso_local i64 @stats_value_at(i32*, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
